<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="a_hz" translatable="false">A (Hz)</string>
    <string name="abc_add_to_song">Copy abc notation to song</string>
    <string name="abc_editor">Abc web editor</string>
    <string name="abc_include_tab">Include tablature</string>
    <string name="abc_include_tab_info">Show instrument tablature below the music score</string>
    <string name="abc_inline_copy">Insert inline abc code</string>
    <string name="abc_inline_text">Inline ABC text</string>
    <string name="abc_inline_text_info">Copy the above code into a single line of inline ABC notation that can be pasted into the song lyrics</string>
    <string name="abc_inline_width">ABC notation staff width</string>
    <string name="abc_inline_width_info">Setting the staff width too high will cause the abc notation to become very small and will also shrink any song lyrics when used inline</string>
    <string name="abc_not_available">ABC notation view not allowed here</string>
    <string name="abc_popup_width">Popup width</string>
    <string name="abc_popup_width_info">The width of the popup window as a percentage of the screen width</string>
    <string name="abc_transpose_to_song">Auto transpose to song key</string>
    <string name="abc_transpose_to_song_info">If a key is set in the song and in the abc notation, the app will try to adjust the output of the abc notation to match the song key.</string>
    <string name="about">About</string>
    <string name="about_description">App info, help, user guide, etc.</string>
    <string name="acceleration">Acceleration</string>
    <string name="accent">Accent</string>
    <string name="accuracy">Accuracy</string>
    <string name="action">Action</string>
    <string name="action_button_info">Click to show or hide your page buttons.\n\nEach one can be assigned to song actions such as metronome, transpose, pads, etc.\nLong pressing on the main button lets you change the settings of each button.\nLong pressing on some page buttons performs quick actions such as start/stop/edit</string>
    <string name="action_long_press">Additional long press action</string>
    <string name="action_short_press">Short press/click action</string>
    <string name="actionbar_autohide">Automatically hide action bar</string>
    <string name="actionbar_display">Actionbar</string>
    <string name="actionbar_info">Change the appearance of the information in the actionbar</string>
    <string name="actionbar_left">Action bar left</string>
    <string name="actionbar_minimise">Minimise action bar icons</string>
    <string name="actionbar_minimise_info">Move non-essential icons into the overflow menu to give more space for the song title</string>
    <string name="actionbar_right">Action bar right</string>
    <string name="actions">Actions</string>
    <string name="actions_current_song">Actions for current song</string>
    <string name="add">Add</string>
    <string name="add_all_songs_to_set">This will add all songs shown in the song menu to your set</string>
    <string name="add_custom_slide">Add custom slide to set</string>
    <string name="add_reusable">Save as a reusable slide</string>
    <string name="add_song_to_set">Add current song to set</string>
    <string name="add_songs">Add songs</string>
    <string name="added_to_set">has been added to the end of your current set.</string>
    <string name="aeros" translatable="false">Aeros</string>
    <string name="aeros_info">Settings specific to Aeros loop pedal</string>
    <string name="aeros_mode">Aeros mode</string>
    <string name="aeros_mode_info">This restricts the number of folders to 128 in total.  The first 111 are designated as folders and the remaining 17 are designated as playlists</string>
    <string name="after">After</string>
    <string name="air_turn_long_press">AirTurn mode</string>
    <string name="air_turn_long_press_info">When using a pedal that does not send long press actions, you can simulate this by setting a desired long press time</string>
    <string name="air_turn_long_press_time">Long press wait time</string>
    <string name="alert">Alert</string>
    <string name="alert_text">Enter message text</string>
    <string name="alpha">Alpha</string>
    <string name="alphabetical">Alphabetical song index</string>
    <string name="alphabetical_level2">Two character alphabetical index</string>
    <string name="alphabetical_level2_info">Clicking on an item in the alphabetical index will toggle between one and two character alphabetical index</string>
    <string name="alphabetical_sort">Put items in alphabetical order</string>
    <string name="amp">Amp</string>
    <string name="analytics">Song analytics</string>
    <string name="analytics_count">Sort by added to set count</string>
    <string name="analytics_info">View song usage stats</string>
    <string name="analytics_last_added_to_set">Sort by last added to set date</string>
    <string name="analytics_last_cast">Sort by last cast date (external display)</string>
    <string name="analytics_last_viewed">Sort by last viewed</string>
    <string name="analytics_popularity">Sort by popularity</string>
    <string name="analytics_reset">Reset song analytics</string>
    <string name="analytics_set_count">Sort by added to set count</string>
    <string name="app">App</string>
    <string name="app_id" translatable="false">4E2B0891</string>
    <string name="app_name" translatable="false">OpenSongApp</string>
    <string name="app_specific_file">A file specific to OpenSongApp</string>
    <string name="appearance_change">Adjusts appearance</string>
    <string name="apply_changes">Apply changes</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="audio_player">Audio player</string>
    <string name="audio_player_info">Play saved audio files</string>
    <string name="audio_recorder">Audio recorder</string>
    <string name="audio_recorder_info">Record audio notes or ideas using your microphone</string>
    <string name="autoscroll">Autoscroll</string>
    <string name="autoscroll_info">Adjust the autoscroll settings</string>
    <string name="backup">Backup</string>
    <string name="backup_import">Import OpenSongApp backup</string>
    <string name="backup_info">OpenSongApp Backup file</string>
    <string name="beat_buddy" translatable="false">BeatBuddy</string>
    <string name="beat_buddy_info">Edit and save song commands for use with a BeatBuddy pedal</string>
    <string name="camera">Camera</string>
    <string name="camera_info">Take a photograph of a songsheet</string>
    <string name="ccli" translatable="false">CCLI</string>
    <string name="ccli_description">CCLI settings</string>
    <string name="chord_settings">Chord settings</string>
    <string name="chords">Chords</string>
    <string name="connections_connect">Connect devices</string>
    <string name="connections_description">Connect to other devices running OpenSongApp</string>
    <string name="controls">Controls</string>
    <string name="controls_description">Foot pedals and screen gestures</string>
    <string name="custom_gestures">Assign custom gestures</string>
    <string name="custom_gestures_info">Double taps and long presses on the song window</string>
    <string name="database_management">Database management</string>
    <string name="database_management_info">Options to help you manage your persistent app database (for PDF/image files) and export the information in your song databases to spreadsheets</string>
    <string name="delete">Delete</string>
    <string name="display">Display</string>
    <string name="display_settings">Change display settings (what you see on screen)</string>
    <string name="drum_sequencer_info">Create, edit and assign drum tracks to songs</string>
    <string name="drummer_settings">Drummer settings</string>
    <string name="edit">Edit</string>
    <string name="edit_song">Edit song</string>
    <string name="export">Export</string>
    <string name="export_current_song">Share the current song</string>
    <string name="highlight">Highlighter</string>
    <string name="highlight_info">Edit highlighter notes / annotations</string>
    <string name="hot_zones">Hot zones</string>
    <string name="hot_zones_info">Assign custom actions to areas of the screen</string>
    <string name="import_basic">Import</string>
    <string name="import_from_file">Import from a saved file</string>
    <string name="import_osb">Restore songs from OpenSongApp backup file (*.osb)</string>
    <string name="import_other" translatable="false">OpenSong, OnSong, PDF, txt, ChoPro, Word</string>
    <string name="link">Link</string>
    <string name="link_info">Link files, audio, etc. to songs</string>
    <string name="load">Load</string>
    <string name="metronome">Metronome</string>
    <string name="metronome_info">Adjust the metronome settings</string>
    <string name="midi" translatable="false">MIDI</string>
    <string name="midi_commands">Edit song commands</string>
    <string name="midi_description">Connect midi devices and change settings</string>
    <string name="multitrack_player">Multitrack player</string>
    <string name="multitrack_player_info">Play multiple audio tracks from a folder</string>
    <string name="music_score">Music score</string>
    <string name="music_score_info">Edit score notes</string>
    <string name="my_band">Import Band sample songs</string>
    <string name="my_church">Import Church sample songs</string>
    <string name="online">Online</string>
    <string name="online_services" translatable="false">UG, SongSelect, Chordie, etc.</string>
    <string name="onsong" translatable="false">iOS/OnSong</string>
    <string name="onsong_import">"Import OnSong backup file"</string>
    <string name="pad">Pad</string>
    <string name="pad_info">Control or edit the current pad or backing track</string>
    <string name="page_buttons">Page buttons</string>
    <string name="pedal">Pedal</string>
    <string name="pedal_controls">Set up foot pedal buttons and actions</string>
    <string name="play_services_error">To use Google Cast, Fonts and Nearby Connections, you will need to install Google Play Services.</string>
    <string name="play_services_how">Show me how</string>
    <string name="profile">Profile</string>
    <string name="profile_explanation">Profiles are used to store your display preferences.</string>
    <string name="quicklaunch_title">Customise quick launch buttons</string>
    <string name="respect_copyright">Respect copyright - always use legally</string>
    <string name="restore">Restore</string>
    <string name="save">Save</string>
    <string name="set_load_info">Load a previously saved set</string>
    <string name="set_new">Create a new set</string>
    <string name="set_new_info">Remove all songs from the current set</string>
    <string name="set_save_info">Save the current set for future use</string>
    <string name="set_share_info">Share or export a set with others</string>
    <string name="share">Share</string>
    <string name="song_actions">Song actions</string>
    <string name="song_actions_description">Adjust settings for song actions</string>
    <string name="sound_level_meter">Sound level meter</string>
    <string name="sound_level_meter_info">Check volumes (uses microphone)</string>
    <string name="storage">Storage</string>
    <string name="storage_settings">Manage your storage location and song folders</string>
    <string name="swipe">Swipe settings</string>
    <string name="swipe_info">Adjust gestures to move between songs</string>
    <string name="tuner">Tuner</string>
    <string name="tuner_info">Help to tune your instrument</string>
    <string name="voicelive" translatable="false">VoiceLive</string>
    <string name="voicelive_info">System defaults for controlling a TC Helicon VoiceLive pedal (e.g. VoiceLive Extreme 3)</string>
</resources>