<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".preferences.SettingsCategories"
    style="@style/PrefScrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.garethevans.church.opensongtablet.customviews.PrefTextLinkView
            android:id="@+id/storageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:main="@string/storage"
            app:sub="@string/storage_settings" />
        <TableRow style="@style/DividerLine" />

        <com.garethevans.church.opensongtablet.customviews.PrefTextLinkView
            android:id="@+id/displayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:main="@string/display"
            app:sub="@string/display_settings" />
        <TableRow style="@style/DividerLine" />

        <com.garethevans.church.opensongtablet.customviews.PrefTextLinkView
            android:id="@+id/actionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:main="@string/song_actions"
            app:sub="@string/song_actions_description" />
        <TableRow style="@style/DividerLine" />

        <com.garethevans.church.opensongtablet.customviews.PrefTextLinkView
            android:id="@+id/gesturesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:main="@string/controls"
            app:sub="@string/controls_description" />
        <TableRow style="@style/DividerLine" />

        <com.garethevans.church.opensongtablet.customviews.PrefTextLinkView
            android:id="@+id/connectButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:main="@string/connections_connect"
            app:sub="@string/connections_description" />
        <TableRow android:id="@+id/connectLine" style="@style/DividerLine" />

        <com.garethevans.church.opensongtablet.customviews.PrefTextLinkView
            android:id="@+id/midiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:main="@string/midi"
            app:sub="@string/midi_description" />
        <TableRow style="@style/DividerLine" />

        <com.garethevans.church.opensongtablet.customviews.PrefTextLinkView
            android:id="@+id/profilesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:main="@string/profile"
            app:sub="@string/profile_explanation" />
        <TableRow style="@style/DividerLine" />

        <com.garethevans.church.opensongtablet.customviews.PrefTextLinkView
            android:id="@+id/ccliButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:main="@string/ccli"
            app:sub="@string/ccli_description" />
        <TableRow style="@style/DividerLine" />

        <com.garethevans.church.opensongtablet.customviews.PrefTextLinkView
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:main="@string/about"
            app:sub="@string/about_description" />
        <TableRow style="@style/DividerLine" />

        <LinearLayout
            android:id="@+id/needPlayServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/play_services_error"/>

            <Button
                android:id="@+id/play_services_how"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_gravity="center_horizontal"
                android:text="@string/play_services_how"
                android:layout_margin="12dp"/>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>