<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DefaultView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/extra_scroll_space_large">

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/soundMeter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sound_level_meter"
                android:hint="@string/sound_level_meter_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/tuner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuner"
                android:hint="@string/tuner_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/aeros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aeros"
                android:hint="@string/aeros_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/beatBuddy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beat_buddy"
                android:hint="@string/beat_buddy_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/voiceLive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/voicelive"
                android:hint="@string/voicelive_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/audioRecorder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audio_recorder"
                android:hint="@string/audio_recorder_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/audioPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audio_player"
                android:hint="@string/audio_player_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/mutitrackPlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multitrack_player"
                android:hint="@string/multitrack_player_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/drumSequencer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drummer_settings"
                android:hint="@string/drum_sequencer_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>


            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/databaseOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/database_management"
                android:hint="@string/database_management_info"
                app:size="large"/>
            <com.garethevans.church.opensongtablet.customviews.MyDivider
                style="@style/MyDividerLine"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>