<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DefaultView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/pageButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/page_buttons"
                android:hint="@string/quicklaunch_title"
                app:size="large"/>
            <TableRow style="@style/DividerLine" />

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/pedals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pedal"
                android:hint="@string/pedal_controls"
                app:size="large"/>
            <TableRow style="@style/DividerLine" />

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/customGestures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_gestures"
                android:hint="@string/custom_gestures_info"
                app:size="large"/>
            <TableRow style="@style/DividerLine" />

            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/swipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/swipe"
                android:hint="@string/swipe_info"
                app:size="large"/>
            <TableRow style="@style/DividerLine" />


            <com.garethevans.church.opensongtablet.customviews.MyMaterialTextView
                android:id="@+id/hotZones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hot_zones"
                android:hint="@string/hot_zones_info"
                app:size="large"/>
            <TableRow style="@style/DividerLine" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
